# dynamodb-csv

./: .editorconfig  .flake8  .gitignore  .textlintrc.json  CNAME  Dockerfile  LICENSE  README.md  _config.yml  config.ini.example  dynamodb_import.py  dynamodb_truncate.py  index.html  index.md  my_table.json  package-lock.json  package.json  pytest.ini  requirements-dev.txt  requirements.txt  sample.csv  sample.csv.spec  sample_exp.csv.spec  sample_gsi_exp.csv.spec  sample_query_exp.csv.spec  sample_query_exp2.csv.spec  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  my_table_create.py  postStartCommand.sh
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yaml  release.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: ci.yaml  docker-hub-release.yaml  pypi-release.yaml  release.yaml  reviewdog.yaml  stale.yaml  test-github-package-release.yaml  test-pypi-release.yaml
app/: dynamodb_import.py  dynamodb_truncate.py  main.py
app/dynamodb/: __init__.py  csv_export.py  csv_import.py  move.py  truncate.py
en/: index.md
ja/: index.md
tests/: conftest.py  test_dynamodb_csv_export.py  test_dynamodb_csv_import.py  test_dynamodb_import.py  test_dynamodb_truncate.py  test_main.py
tests/dynamodb/: test_dynamodb_csv_export.py  test_dynamodb_csv_import.py  test_dynamodb_move.py  test_dynamodb_truncate.py
