[metadata]
name = dynamodb-csv
version = 1.2.3
description = Python command to import CSV into DynamoDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danishi/DynamoDBCSV
keywords = AWS, DynamoDB, CSV
license = MIT
author = danishi
author_email = dns2developer@gmail.com

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages =
    app
    app.dynamodb
install_requires =
  boto3
  configparser
  tqdm

[options.entry_points]
console_scripts =
    dynamodb-csv = app.main:main
