[metadata]
name = dynamodb-csv
version = 1.3.1
description = Python command to import CSV into DynamoDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danishi/DynamoDBCSV
keywords = AWS, DynamoDB, CSV
license = MIT
author = danishi
author_email = dns2developer@gmail.com
classifiers =
  Development Status :: 5 - Production/Stable
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = False
packages =
    app
    app.dynamodb
install_requires =
  boto3
  configparser
  tqdm

[options.entry_points]
console_scripts =
    dynamodb-csv = app.main:main
