[metadata]
name = dynamodb-csv
version = 1.5.4
description = A utility that allows CSV import / export to DynamoDB on the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danishi/dynamodb-csv
keywords = AWS, DynamoDB, CSV
license = MIT
author = danishi
author_email = dns2developer@gmail.com
classifiers =
  Development Status :: 5 - Production/Stable
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Topic :: Utilities

[options]
python_requires = >=3.9
zip_safe = False
include_package_data = False
packages =
    app
    app.dynamodb
install_requires =
  boto3
  configparser
  tqdm

[options.entry_points]
console_scripts =
    dynamodb-csv = app.main:main
